--- a/app/views/monitorings/_modal_trigger_register_description.html.erb
+++ b/app/views/monitorings/_modal_trigger_register_description.html.erb
@@ -19,7 +19,7 @@
         </div>
 
       <div class="modal-footer">
-        <button v-on="click: create()" type="button" v-class="disabled: !has_selected" v-attr="disabled: !has_selected class="btn btn-primary"  data-dismiss="{{has_selected ? 'modal' : ''}}"><%= t 'monitoring.btn.done' %></button>
+        <button v-on="click: create()" type="button" v-class="disabled: !has_selected" v-attr="disabled: !has_selected" class="btn btn-primary"  data-dismiss="{{has_selected ? 'modal' : ''}}"><%= t 'monitoring.btn.done' %></button>
         <button type="button" class="btn btn-default" data-dismiss="modal"><%= t 'monitoring.btn.cancel' %></button>
       </div>
     </div>
