--- a/app/views/monitorings/_modal_trigger_register_description.html.erb
+++ b/app/views/monitorings/_modal_trigger_register_description.html.erb
@@ -12,14 +12,14 @@
           <form>
               <div class="checkbox" v-repeat="s: templates">
                   <label class="checkbox">
-                        <input type="checkbox" v-on="click: checkVal()" v-model="s.checked" id="inputEmail3">{{s.name}}
+                        <input type="checkbox" v-model="s.checked" id="inputEmail3">{{s.name}}
                   </label>
               </div>
           </form>
         </div>
 
       <div class="modal-footer">
-        <button v-on="click: create()" type="button" v-class="disabled: !has_selected" v-attr="disabled: !has_selected" class="btn btn-primary"  data-dismiss="{{has_selected ? 'modal' : ''}}"><%= t 'monitoring.btn.done' %></button>
+        <button v-on="click: create()" type="button" v-attr="disabled: !has_selected" class="btn btn-primary"  data-dismiss="{{has_selected ? 'modal' : ''}}"><%= t 'monitoring.btn.done' %></button>
         <button type="button" class="btn btn-default" data-dismiss="modal"><%= t 'monitoring.btn.cancel' %></button>
       </div>
     </div>
