get the selected/linked templates of the selected host-id and print in a html page

--- a/app/views/vue/_monitoring_tabpane.html.erb
+++ b/app/views/vue/_monitoring_tabpane.html.erb
@@ -123,4 +123,11 @@
       </table>
     </div>
   </div>
+
+  <div class="col-md-12 col-sm-12" v-if="!before_setting">
+    <h4 class="page-header">Linked Templates</h4>
+    <ul v-repeat="l: linked_templates">
+      <li>{{l.name}}</li>
+    </ul>
+  </div>
 </div>
