test for update tabpane

--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -44,6 +44,9 @@
           <li v-class="disabled : no_stack">
             <a href="#" tabindex="-1" v-on="click: show_edit_monitoring()"><%= t 'monitoring.config' %></a>
           </li>
+          <li v-class="disabled : no_stack">
+            <a href="#" tabindex="-1" v-on="click: show_update_templates()"><%= t 'monitoring.template' %></a>
+          </li>
           <li class="divider"></li>
           <li>
             <a href="#" tabindex="-1" v-on="click: show_infra_logs()"><%= t 'infrastructures.btn.infrastructure_log' %></a>
