--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -90,6 +90,7 @@
         <stack-events-table      v-if="tabpane_active('event_logs')"       events="{{* current_infra.events}}"></stack-events-table>
         <monitoring-tabpane      v-if="tabpane_active('monitoring')"       ></monitoring-tabpane>
         <edit-monitoring-tabpane v-if="tabpane_active('edit-monitoring')"  ></edit-monitoring-tabpane>
+        <update-template-tabpane v-if="tabpane_active('update-template')"  ></update-template-tabpane>
         <infra-logs-tabpane      v-if="tabpane_active('infra_logs')"       ></infra-logs-tabpane>
         <ec2-tabpane             v-if="tabpane_active('ec2')"              physical_id="{{* tabpaneGroupID}}"></ec2-tabpane>
         <rds-tabpane             v-if="tabpane_active('rds')"              physical_id="{{* tabpaneGroupID}}"></rds-tabpane>
@@ -112,6 +113,7 @@
 <script id="infra-logs-tabpane-template"      type="text/template"> <%= render 'vue/infra_logs_tabpane'  %> </script>
 <script id="monitoring-tabpane-template"      type="text/template"> <%= render 'vue/monitoring_tabpane' %> </script>
 <script id="edit-monitoring-tabpane-template" type="text/template"> <%= render 'vue/edit_monitoring_tabpane' %> </script>
+<script id="update-template-tabpane-template" type="text/template"> <%= render 'vue/update_template_tabpane' %> </script>
 <script id="rds-tabpane-template"             type="text/template"> <%= render 'vue/rds_tabpane'  %> </script>
 <script id="elb-tabpane-template"             type="text/template"> <%= render 'vue/elb_tabpane'  %> </script>
 <script id="s3-tabpane-template"              type="text/template"> <%= render 'vue/s3_tabpane'  %> </script>
