added monitoring tabpane on infrastructure.js

--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -45,7 +45,7 @@
             <a href="#" tabindex="-1" v-on="click: show_edit_monitoring()"><%= t 'monitoring.config' %></a>
           </li>
           <li v-class="disabled : no_stack">
-            <a href="#" tabindex="-1" v-on="click: show_update_templates()"><%= t 'monitoring.template' %></a>
+            <a href="#" tabindex="-1" v-on="click: show_update_template()"><%= t 'monitoring.template' %></a>
           </li>
           <li class="divider"></li>
           <li>
