--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -4,6 +4,47 @@
   <%= breadcrumbs(@selected_client, @selected_project, nil) if current_user.master? %>
   <%= link_to t('infrastructures.return_to_projects'), projects_path, {class: "btn btn-small btn-link"} unless current_user.master? %>
 </div>
+
+<!-- component template -->
+<script type="text/x-template" id="grid-template">
+  <table>
+    <thead>
+      <tr>
+        <th v-repeat="key: columns"
+          v-on="click:sortBy(key)"
+          v-class="active: sortKey == key">
+          {{key | capitalize}}
+          <span class="arrow"
+            v-class="reversed[key] ? 'dsc' : 'asc'">
+          </span>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr v-repeat="
+        entry: data
+        | filterBy filterKey
+        | orderBy sortKey reversed[sortKey]">
+        <td v-repeat="key: columns">
+          {{entry[key]}}
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</script>
+
+<!-- demo root element -->
+<div id="demo">
+  <form id="search">
+    Search <input name="query" v-model="searchQuery">
+  </form>
+  <demo-grid
+    data="{{gridData}}"
+    columns="{{gridColumns}}"
+    filter-key="{{searchQuery}}">
+  </demo-grid>
+</div>
+
 <table class="table table-hover">
   <thead>
     <tr>
