--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -7,26 +7,26 @@
 
 <!-- component template -->
 <script type="text/x-template" id="grid-template">
-  <table>
+  <table class="table table-hover">
     <thead>
       <tr>
         <th v-repeat="key: columns"
           v-on="click:sortBy(key)"
           v-class="active: sortKey == key">
-          {{key | capitalize}}
-          <span class="arrow"
-            v-class="reversed[key] ? 'dsc' : 'asc'">
+          <text v-text="key | wrap"></text>
+          <span class="glyphicon"
+            v-class="reversed[key] ? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'">
           </span>
         </th>
       </tr>
     </thead>
     <tbody>
-      <tr v-repeat="
+      <tr class="infrastructure-row" v-repeat="
         entry: data
         | filterBy filterKey
         | orderBy sortKey reversed[sortKey]">
         <td v-repeat="key: columns">
-          {{entry[key]}}
+          <text v-text="entry[key] | listen"></text>
         </td>
       </tr>
     </tbody>
