--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -10,26 +10,24 @@
 <script type="text/x-template" id="grid-template">
   <table class="table table-hover">
     <thead>
-      <tr>
-        <th v-repeat="key: columns"
+    <tr>
+      <th v-repeat="key: columns"
           v-on="click:sortBy(key)"
           v-class="active: sortKey === key">
-          <text v-text="key | wrap"></text>
-          <span v-if="key !== 'id'" class="glyphicon pull-right"
-            v-class="reversed[key] ? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'">
-          </span>
-        </th>
-      </tr>
+            <text v-text="key | wrap"></text>
+            <span v-if="key !== 'id'" class="glyphicon pull-right" v-class="reversed[key] ? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
+      </th>
+    </tr>
     </thead>
     <tbody>
-      <tr class="infrastructure-row" v-repeat="
-        entry: data
-        | filterBy filterKey
-        | orderBy sortKey reversed[sortKey]">
-        <td v-repeat="key: columns">
-          <text id="{{key}}" v-html="entry[key] | listen key "></text>
-        </td>
-      </tr>
+    <tr class="infrastructure-row" v-repeat="
+              entry: data
+              | filterBy filterKey
+              | orderBy sortKey reversed[sortKey]">
+      <td v-repeat="key: columns">
+        <text id="{{key}}" v-html="entry[key] | listen key "></text>
+      </td>
+    </tr>
     </tbody>
   </table>
 </script>
