--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -14,7 +14,7 @@
       <th v-repeat="key: columns"
           v-on="click:sortBy(key)"
           v-class="active: sortKey === key">
-            <text v-text="key | wrap"></text>
+            <text v-html="key | wrap"></text>
             <span v-if="key !== 'id'" class="glyphicon pull-right" v-class="reversed[key] ? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
       </th>
     </tr>
@@ -35,7 +35,7 @@
 <!-- demo root element -->
 <div id="demo">
   <form id="search">
-    <input name="query" v-model="searchQuery" class="form-control" placeholder="Search .....">
+    <input id="searchQ" name="query" v-model="searchQuery" class="form-control" placeholder="<%= t 'infrastructures.search' %>">
   </form>
   <demo-grid
     data="{{gridData}}"
@@ -45,9 +45,21 @@
 </div>
 
 <table class="table table-hover hidden">
+  <thead>
+    <tr>
+      <th><%= t 'infrastructures.stackname' %></th>
+      <th><%= t 'infrastructures.region' %></th>
+      <th><%= t 'infrastructures.keypair' %></th>
+      <th><%= t 'common.actions' %></th>
+    </tr>
+  </thead>
   <tbody>
     <% @infrastructures.each do |infra| %>
       <tr class="infrastructure-row">
+        <td><%= infra.stack_name %></td>
+        <td><%= infra.region %></td>
+        <td><%= infra.keypairname || t('infrastructures.msg.no_keypair') %></td>
+        <td>
         <td>
           <%= button_show_infra(infra) %>
 
