--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -11,24 +11,24 @@
   <table class="table table-hover">
     <tr>
       <th v-repeat="key: columns"
-          v-on="click:sortBy(key)"
-          v-class="active: sortKey === key">
-            <text v-html="key | wrap"></text>
-            <span v-if="key !== 'id'" class="glyphicon pull-right" v-class="reversed[key] ? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
+        v-on="click:sortBy(key)"
+        v-class="active: sortKey === key">
+        <text v-html="key | wrap"></text>
+          <span v-if="key !== 'id'" class="glyphicon pull-right" v-class="reversed[key] ? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
       </th>
-    </tr>
+      </tr>
     </thead>
     <tbody>
       <tr class="infrastructure-row" v-repeat="
-               entry: data
-               | filterBy filterKey
-               | orderBy sortKey reversed[sortKey]">
-       <td v-repeat="key: columns">
-         <text id="{{key}}" v-html="entry[key] | listen key "></text>
-       </td>
-     </tr>
-     </tbody>
-   </table>
+        entry: data
+        | filterBy filterKey
+        | orderBy sortKey reversed[sortKey]">
+        <td v-repeat="key: columns">
+          <text id="{{key}}" v-html="entry[key] | listen key "></text>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </script>
 
 <!-- demo root element -->
@@ -48,21 +48,21 @@
 </div>
 
 <table class="table table-hover hidden">
-  <thead>
+  <!-- <thead>
     <tr>
       <th><%= t 'infrastructures.stackname' %></th>
       <th><%= t 'infrastructures.region' %></th>
       <th><%= t 'infrastructures.keypair' %></th>
       <th><%= t 'common.actions' %></th>
     </tr>
-  </thead>
+  </thead> -->
   <tbody>
     <% @infrastructures.each do |infra| %>
-      <tr class="infrastructure-row">
+      <!-- <tr class="infrastructure-row">
         <td><%= infra.stack_name %></td>
         <td><%= infra.region %></td>
         <td><%= infra.keypairname || t('infrastructures.msg.no_keypair') %></td>
-        <td>
+        <td> -->
         <td>
           <%= button_show_infra(infra) %>
 
@@ -77,9 +77,9 @@
   </tbody>
 </table>
 
-<div class="text-center">
+<!-- <div class="text-center">
   <%= paginate(@infrastructures) %>
-</div>
+</div> -->
 
 <%= button_add_infra(@selected_project) %>
 
