changed to bootswatch theme (paper)

--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -37,9 +37,8 @@
   <div class="input-group">
     <form id="search">
       <input type="text" name="query" v-model="searchQuery" class="form-control" placeholder="<%= t 'infrastructures.search' %>">
-    </form>
+    </form><hr>
   </div>
-  <hr>
   <demo-grid
     data="{{gridData}}"
     columns="{{gridColumns}}"
