display a message when infrastructure list is empty.

--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -45,6 +45,7 @@
     columns="{{gridColumns}}"
     filter-key="{{searchQuery}}">
   </demo-grid>
+  <div id="infra-empty" class="hidden"><span>Infrastructure list is empty.<span></div>
 </div>
 <span id="loading"><div class="loader"></div> Loading ...</span>
 <hr>
