change class to style to show or hide message.

--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -45,8 +45,9 @@
     columns="{{gridColumns}}"
     filter-key="{{searchQuery}}">
   </demo-grid>
-  <div id="infra-empty" class="hidden"><span>Infrastructure list is empty.<span></div>
+
 </div>
+<div id="infra-empty" style="display: none;"><span>Infrastructure list is empty.<span></div>
 <span id="loading"><div class="loader"></div> Loading ...</span>
 <hr>
 <table class="table table-hover hidden">
