added locales for the loading and empty lists

--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -47,8 +47,8 @@
   </demo-grid>
 
 </div>
-<div id="infra-empty" style="display: none;"><span>Infrastructure list is empty.<span></div>
-<span id="loading"><div class="loader"></div> Loading ...</span>
+<div id="infra-empty" style="display: none;"><span><%= t 'infrastructures.msg.empty-list' %><span></div>
+<span id="loading"><div class="loader"></div> <%= t 'infrastructures.msg.loading-list' %></span>
 <hr>
 <table class="table table-hover hidden">
   <!-- <thead>
