--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -5,50 +5,8 @@
   <%= link_to t('infrastructures.return_to_projects'), projects_path, {class: "btn btn-small btn-link"} unless current_user.master? %>
 </div>
 
+<%= render 'vue/index' %>
 
-<!-- component template -->
-<script type="text/x-template" id="grid-template">
-  <table class="table table-hover">
-    <tr>
-      <th v-repeat="key: columns"
-        v-on="click:sortBy(key)"
-        v-class="active: sortKey === key">
-        <text v-html="key | wrap"></text>
-          <span v-if="key !== 'id'" class="glyphicon pull-right" v-class="reversed[key] ? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
-      </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr class="infrastructure-row" v-repeat="
-        entry: data
-        | filterBy filterKey
-        | orderBy sortKey reversed[sortKey]">
-        <td v-repeat="key: columns">
-          <text id="{{key}}" v-html="entry[key] | listen key "></text>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</script>
-
-<!-- demo root element -->
-
-<div id="demo">
-  <div class="input-group">
-    <form id="search">
-      <input type="text" name="query" v-model="searchQuery" class="form-control" placeholder="<%= t 'infrastructures.search' %>">
-    </form><hr>
-  </div>
-  <demo-grid
-    data="{{gridData}}"
-    columns="{{gridColumns}}"
-    filter-key="{{searchQuery}}">
-  </demo-grid>
-
-</div>
-<div id="infra-empty" style="display: none;"><span><%= t 'infrastructures.msg.empty-list' %><span></div>
-<span id="loading"><div class="loader"></div> <%= t 'infrastructures.msg.loading-list' %></span>
-<hr>
 <table class="table table-hover hidden">
   <!-- <thead>
     <tr>
