--- a/app/views/vue/_index.html.erb
+++ b/app/views/vue/_index.html.erb
@@ -11,7 +11,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr class="infrastructure-row" v-repeat="
+      <tr class="{{option === 'infrastructure' ? 'infrastructure-row' : ''}}" v-repeat="
         entry: data
         | filterBy filterKey
         | orderBy sortKey reversed[sortKey]
