--- a/app/assets/stylesheets/bootstrap_extend.css
+++ b/app/assets/stylesheets/bootstrap_extend.css
@@ -90,3 +90,40 @@ input[type="number"] {
   border-top-width: 0;
   border-bottom: 4px solid #000000;
 }
+
+/* For button enhancement */
+.btn-info {
+  background-color: hsl(189, 77%, 52%) !important;
+  background-repeat: repeat-x;
+  border-color: #1798c4 #1798c4 hsl(195, 79%, 38%);
+  color: rgb(255, 255, 255) !important;
+  text-shadow: 0 1px 1px rgb(140, 225, 237);
+  -webkit-font-smoothing: antialiased;
+}
+
+.label-info {
+  background-color: hsl(189, 77%, 52%) !important;
+  background-repeat: repeat-x;
+  border-color: #1798c4 #1798c4 hsl(195, 79%, 38%);
+  color: rgb(255, 255, 255) !important;
+  text-shadow: 0 1px 1px rgb(140, 225, 237);
+  -webkit-font-smoothing: antialiased;
+}
+
+.alert-info {
+  background-color: hsl(189, 77%, 52%) !important;
+  background-repeat: repeat-x;
+  border-color: #1798c4 #1798c4 hsl(195, 79%, 38%);
+  color: rgb(255, 255, 255) !important;
+  text-shadow: 0 1px 1px rgb(140, 225, 237);
+  -webkit-font-smoothing: antialiased;
+}
+
+.btn-info:hover {
+  background-color: hsl(195, 79%, 43%) !important;
+  background-repeat: repeat-x;
+  border-color: #1798c4 #1798c4 hsl(195, 79%, 38%);
+  color: rgb(255, 255, 255) !important;
+  text-shadow: 0 1px 1px rgb(140, 225, 237);
+  -webkit-font-smoothing: antialiased;
+}
