--- a/app/views/users_admin/index.html.erb
+++ b/app/views/users_admin/index.html.erb
@@ -41,8 +41,11 @@
   <%= paginate(@users) %>
 </div>
 
-<%= link_to t('users.btn.add'), new_users_admin_path, class: 'btn btn-primary btn-sm' %>
-<button class="btn btn-sm btn-default" id="sync_zabbix"><%= t('users.btn.sync') %></button>
+<%= link_to new_users_admin_path, class: "btn btn-primary btn-sm", remote: true do %>
+  <span class="glyphicon glyphicon-plus-sign"></span> <%= t('users.btn.add') %>
+<% end %>
+
+<button class="btn btn-sm btn-default" id="sync_zabbix"><%= glyphicon("refresh") %> <%= t('users.btn.sync') %></button>
 
 <div class="page-header"></div>
 <div id="user-edit" style="padding-bottom: 70px;"></div>
