--- a/app/views/vue/_index.html.erb
+++ b/app/views/vue/_index.html.erb
@@ -3,10 +3,17 @@
   <table class="table table-hover">
     <tr>
       <th v-repeat="key: columns"
-        v-on="click:sortBy(key)"
         v-class="active: sortKey === key">
         <text v-html="key | wrap option"></text>
-          <span v-if="key !== 'id'" class="glyphicon pull-right" v-class="reversed[key] ? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
+          <span v-on="click:sortBy(key)" v-if="key !== 'id' && key !== 'role'" class="glyphicon pull-right" v-class="reversed[key] ? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
+          <i v-if="key === 'role'"><a href="#" id="role" v-on="click:pop()"
+            data-content="<%= t('users.msg.role')%>"
+            data-placement="right"
+            rel="popover"
+            data-original-title="<%= t('users.role') %>"
+            class="pull-right popover-help">
+            <span class="glyphicon glyphicon-question-sign"></span></a>
+          </i>
       </th>
       </tr>
     </thead>
