fixed broken link and import module

--- a/app/views/users_admin/index.html.erb
+++ b/app/views/users_admin/index.html.erb
@@ -24,7 +24,7 @@
   </tbody>
 </table>
 
-<%= link_to new_users_admin_path, class: "btn btn-primary btn-sm", remote: true do %>
+<%= link_to new_users_admin_path, class: "btn btn-primary btn-sm" do %>
   <span class="glyphicon glyphicon-plus-sign"></span> <%= t('users.btn.add') %>
 <% end %>
 
