--- a/app/views/vue/_index.html.erb
+++ b/app/views/vue/_index.html.erb
@@ -1,6 +1,7 @@
 <!-- component template -->
 <script type="text/x-template" id="grid-template">
   <table class="table table-hover">
+  <thead>
     <tr>
       <th v-repeat="key: columns"
         v-class="active: sortKey === key">
