Search scope in user admin index fix

--- a/app/views/users_admin/index.html.erb
+++ b/app/views/users_admin/index.html.erb
@@ -2,7 +2,7 @@
   <h1><%= t('users.title')%></h1>
 </div>
 
-<%= render 'vue/index' %>
+<%= render 'vue/user_admin_index' %>
 <table class="table hidden">
     <tbody>
     <% @users.each do |user| %>
