--- a/app/views/vue/_user_admin_index.html.erb
+++ b/app/views/vue/_user_admin_index.html.erb
@@ -1,6 +1,6 @@
 <!-- component template -->
 <script type="text/x-template" id="grid-template">
-  <table class="table table-hover">
+  <table class="table table-hover ssp">
     <tr>
       <th v-repeat="key: columns"
         v-class="active: sortKey === key">
