--- a/app/views/vue/_serverspec_results_tabpane.html.erb
+++ b/app/views/vue/_serverspec_results_tabpane.html.erb
@@ -6,7 +6,7 @@
       <input type="text" name="query" v-model="filterKey" class="form-control" placeholder="<%= t 'infrastructures.search' %>">
     </form><hr>
   </div>
-  <table class="table table-hover">
+  <table class="table table-hover ssp">
     <tr>
       <th v-repeat="key: columns"
         v-class="active: sortKey === key">
