--- a/app/views/serverspecs/generator.html.erb
+++ b/app/views/serverspecs/generator.html.erb
@@ -6,63 +6,9 @@
 
       <h3><%=t('serverspecs.generator.resources')%></h3>
       <button class="btn btn-success" v-on="click: addDescribe()"><%=t('serverspecs.generator.add_resource')%></button>
-      <div class="panel panel-primary" v-repeat="desc: ast">
-        <div class="panel-heading">
-          <button class="btn btn-danger pull-right btn-xs" v-on="click: removeDescribe($index)"><span class="glyphicon glyphicon-remove"></span></button>
-          <h3 class="panel-title">{{desc.resourceType + "(" + desc.name + ")"}}</h3>
-        </div>
 
-        <div class="panel-body">
-
-          <div class="form-group">
-            <label>
-              ResourceType
-              <input type="text" class="form-control" required v-model="desc.resourceType">
-            </label>
-          </div>
-
-          <div class="form-group">
-            <label>
-              Name
-              <input type="text" class="form-control" required v-model="desc.name">
-            </label>
-          </div>
-
-          <button class="btn btn-success" v-on="click: addIt(desc)"><%=t('serverspecs.generator.add_it')%></button>
-          <button class="btn btn-success" v-on="click: addIts(desc)"><%=t('serverspecs.generator.add_its')%></button>
-
-          <div class="panel panel-info" v-repeat="it: desc.body">
-            <div class="panel-heading">
-              <button class="btn btn-danger pull-right btn-xs" v-on="click: removeIt(desc, $index)"><span class="glyphicon glyphicon-remove"></span></button>
-              <h3 v-if="it.type === 'it'"  class="panel-title">{{it.matcher.name}}</h3>
-              <h3 v-if="it.type === 'its'" class="panel-title">{{it.name}} {{it.matcher.name}}</h3>
-            </div>
-            <div class="panel-body">
-              <div class="form-group" v-if="it.type === 'its'">
-                <label>
-                  Name
-                  <input type="text" class="form-control" required v-model="it.name">
-                </label>
-              </div>
-
-              <div class="form-group">
-                <label>
-                  Matcher
-                  <input type="text" class="form-control" required v-model="it.matcher.name">
-                </label>
-              </div>
-
-              <div class="form-group">
-                <label>
-                  Should/Should not
-                  <input type="checkbox" class="form-control" v-model="it.should">
-                </label>
-              </div>
-
-            </div>
-          </div>
-
-        </div>
+      <div v-repeat="desc: ast">
+        <resource-panel desc="{{@ desc}}" idx="{{$index}}"></resource-panel>
       </div>
     </div>
 
@@ -74,3 +20,5 @@
     </div>
   </div>
 </div>
+
+<script id="resource-template" type="text/template"> <%= render 'gen_resource' %> </script>
