--- a/app/views/serverspecs/generator.html.erb
+++ b/app/views/serverspecs/generator.html.erb
@@ -21,4 +21,5 @@
   </div>
 </div>
 
-<script id="resource-template" type="text/template"> <%= render 'gen_resource' %> </script>
+<script id="resource-panel-template" type="text/template"> <%= render 'gen_resource' %> </script>
+<script id="it-panel-template"       type="text/template"> <%= render 'gen_it' %> </script>
